fix: add overflow-x-auto to pre element and mx-auto for media shortcodes

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,6 +1,6 @@
 /* Code block and Inline-code block */
 pre {
-  @apply scrollbar-thumb-neutral-600 scrollbar-thin !scrollbar-track-neutral-900/0 rounded-lg bg-neutral-900! p-4;
+  @apply scrollbar-thumb-neutral-600 scrollbar-thin !scrollbar-track-neutral-900/0 overflow-x-auto rounded-lg bg-neutral-900! p-4;
 }
 
 code:not(pre > *) {
@@ -10,4 +10,11 @@ code:not(pre > *) {
 code::before,
 code::after {
   @apply hidden;
+}
+
+/* Hugo Default Shortcodes */
+.instagram-media,
+.threads-media,
+.twitter-tweet {
+  @apply mx-auto!;
 }
